--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,9 +3,9 @@
   "configurations": [
     {
       "name": "Launch index.html", // название конфигурации(конфигураций может быть много, сделано для удобства запуска из debug-панели в VS Code)
-      "type": "chrome", // название браузера(который должен быть установлен) в котором будет открыт тестируемый файл
+      "type": "pwa-chrome", // название браузера(который должен быть установлен) в котором будет открыт тестируемый файл
       "request": "launch", // команда, которую необходимо выполнить дебагеру
-      "file": "index.html" // название файла, к которому применить команду из пункта "request"
+      "file": "c:\\Sch_adel\\Java_script\\jsaqa\\jsaqa_7-01\\index.html" // название файла, к которому применить команду из пункта "request"
     }
   ]
 }
